# data_manager

./: .gitignore  README.md  config.example.yaml  pyproject.toml
.claude/: settings.json
scripts/: authorize_drive.py  build_bundle.sh  install_on_robot.sh  update_on_robot.sh
src/sn2_backup/: __init__.py  __main__.py  config.py  drive.py  email_notify.py  error_watch.py  identity.py  runner.py  scanner.py  state.py
systemd/: sn2-backup.service  sn2-backup.timer
tests/: test_config.py  test_drive.py  test_email_notify.py  test_error_watch.py  test_identity.py  test_runner.py  test_scanner.py  test_state.py
